[project]
name = "black-hole-simulation"
version = "0.0.0"
authors = [
  {name = "Matt Kelliher", email = "matthewlkelliher@gmail.com"},
]
description = "A basic black hole simulation written in Python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "pygame-ce>=2.5.5",
]
